# zenith

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  code of conduct.md  go.mod  index.zen  portal_db.json  security.m  test_file.txt
.github/workflows/: installer.yml  pages-installer.yml  release.yml  tests.yml
assets/: README.md
benchmarks/: fib.php  fib.zen  sieve.php  sieve.zen
benchmarks/advanced/: ack.php  ack.zen  concurrency.php  concurrency.zen  matrix.php  matrix.zen  security.php  security.zen  stress.php  stress.zen
benchmarks/ultra/: ack_extreme.php  ack_extreme.zen  concurrency_10k.php  concurrency_10k.zen  fib_comp.zen  memory_2m.php  memory_2m.zen  sieve_1m.php  sieve_1m.zen
compiler/analyzer/: analyzer.go
compiler/codegen/: transpiler.rs
compiler/core/: analyzer.rs  cache.rs  lexer.rs  mod.rs  parser.rs  server.rs  system.rs
compiler/lexer/: lexer.go
compiler/parser/: ast.go  parser.go
compiler/transpiler/: transpiler.go
docs/: architecture.md  functional.md  installation.md  modern_php.md  syntax.md
editors/vscode/: LICENSE  README.md  language-configuration.json  package-lock.json  package.json  (+2 more)
examples/: benchmark.zen
scripts/: build.sh  install.ps1  install.sh
src/: cli.rs  lib.rs  main.rs
test/: advanced_test.zen  arrow_test.zen  debug_ctx.zen  fiber_test.zen  interop_test.zen  match_opt_test.zen  match_test.zen  nullsafe_test.zen  pipe_operator.zen  pipe_test.zen  security_test.zen  stdlib_test.zen  test_runner.zen  type_error.zen  xss_test.zen
tests/: advanced_test.zen  arrow_test.zen  cleanup_test.zen  debug_ctx.zen  identity_test.zen  interop_test.zen  match_test.zen  nullsafe_test.zen  optimization_test.zen  pipe_operator.zen  regex_test.zen  security_audit.zen  security_test.zen  test_runner.zen
(+32 files in other folders)
