[package]
name = "zenith-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencies for the compiler
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
inkwell = { version = "0.1.1", features = ["llvm14-0"] } # For native backend (C++ speed)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logos = "0.13"
nom = "7.1"
