[package]
name = "zenith-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencies for the compiler
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
inkwell = { version = "0.1.1", features = ["llvm14-0"] } # For native backend (C++ speed)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logos = "0.13"
nom = "7.1"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
dirs = "5.0"
zip = "0.6" # for extracting if needed, though Go used tar.gz
flate2 = "1.0"
tar = "0.4"
which = "4.4"
tempfile = "3.8"
actix-web = "4.4"
actix-files = "0.6"
actix-rt = "2.9"
