[package]
name = "zenith"
version = "0.1.0"
edition = "2021"
default-run = "zenith"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logos = "0.13"
nom = "7.1"
colored = "2.0"
regex = "1.10"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
dirs = "5.0"
zip = "0.6" 
flate2 = "1.0"
tar = "0.4"
which = "4.4"
tempfile = "3.8"
walkdir = "2.4"
actix-web = "4.4"
actix-files = "0.6"
actix-rt = "2.9"

tower-lsp = "0.20"
lsp-types = "0.94"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "zenith"
path = "src/main.rs"
